--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="hero grid">
       <div class="left">
         <div class="credits">
-          Photo byh
+          Photo by
           <a
             href="https://unsplash.com/@iriser?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
             >Irina Iriser</a
