--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Glegoo&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="flower.svg" />
   </head>
   <body class="body">
-    <div class="hero grid">
+    <div class="grid">
       <div class="left">
         <div class="credits">
           Photo by
@@ -28,11 +29,13 @@
           Ich wollte mich für die Möglichkeit bedanken, im Orientierungkurs von
           DCI teilnehmen zu dürfen. In diesen vier Wochen habe ich die
           Grundkentnisse von HTML und CSS gelernt, sodass ich diese simple Seite
-          selber bauen konnte. Ich bin fest davon überzeugt, dass mir der
-          Jahreskurs notwendige Fähigkeiten im Bereich Web-Development geben
-          wird.<br />
+          selber bauen konnte. <br />
+          Ich bin fest davon überzeugt, dass mir der Jahreskurs notwendige
+          Fähigkeiten im Bereich Web-Development geben wird.<br />
+          <br />
           <br />
           Vielen Dank für Ihre Unterstützung, <br />
+
           Aleksandra Blazowska
         </div>
       </div>
