--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="grid">
       <div class="left">
         <div class="credits">
-          Photo by
+          Photo b
           <a
             href="https://unsplash.com/@iriser?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
             >Irina Iriser</a
